--- a/revision/index.html
+++ b/revision/index.html
@@ -109,7 +109,6 @@
         <h3><strong>Section 5 - Computer Networks</strong></h3>
 
         <ul>
-            
             <li><a href="./5-01-Network-Types/">5.01 - Network Types</a></li>
             <li><a href="./5-02-Wired-and-Wireless-Networks/">5.02 - Wired and Wireless Networks</a></li>
             <li><a href="./5-03-Network-Topologies/">5.03 - Network Topologies</a></li>
@@ -118,6 +117,10 @@
             <li><a href="./5-05-Network-Security/">5.05 - Network Security</a></li>
             <li><a href="./5-Summary-Questions/">Summary Questions</a></li>
         </ul>
+
+        <h3><strong>Section 6 - Cyber Security</strong></h3>
+
+        <ul></ul>
 
         <br />
         <br />
