--- a/revision/index.html
+++ b/revision/index.html
@@ -120,7 +120,8 @@
 
         <h3><strong>Section 6 - Cyber Security</strong></h3>
 
-        <ul>    <li><a href="./6-01-Cyber-Security-Threats/">6.01 - Cyber Security Threats</a></li>
+        <ul>
+            <li><a href="./6-01-Cyber-Security-Threats/">6.01 - Cyber Security Threats</a></li>
         </ul>
 
         <br />
