--- a/revision/6-01-Cyber-Security-Threats/index.html
+++ b/revision/6-01-Cyber-Security-Threats/index.html
@@ -33,7 +33,7 @@
 
         <p>
             It would be nice to learn the whole thing, but in an exam you would get away with saying "the processes of
-            protecting networks from attacks". [See June 2023 - Question 16.1]
+            protecting networks from attacks". [See June 2023, Paper 2, Question 16.1]
         </p>
 
         <p><br />There are four main threats that we will look at in detail.</p>
