--- a/revision/6-03-Social-Engineering/index.html
+++ b/revision/6-03-Social-Engineering/index.html
@@ -26,7 +26,61 @@
         <a class="prev-link" href="../6-02-Penetration-Testing/">Previous: 6.02 - Penetration Testing</a>
         <br /> <br />
 
-        <!-- -->
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Social engineering</strong> is the art of manipulating people so that they divulge confidential information.
+        </p>
+
+        <p>
+            Often, no matter how much is spent on sophisticated technical protection such as firewalls, it is <b>people
+            who are the weak point</b>.
+        </p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Blagging</strong> (or pretexting) refers to using an invented scenario to increase the chances of the victim divulging information.
+        </p>
+
+        <p>
+            This could include impersonating an employee of a company, posing as a delivery person, or pretending that
+            they're in trouble and need money.
+        </p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Phishing</strong> is the technique of fraudulently obtaining private information, often via email or SMS.
+        </p>
+
+        <p>Phishing attacks will often convince people to click on links in order to obtain their personal details.</p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Pharming</strong> means creating fake versions of websites where victims enter their details.
+        </p>
+
+        <p>
+            This is the most common form of phishing attack. Many pharming attacks will use fake versions of banks or
+            online shops like Amazon.
+        </p>
+
+        <p><br />Phishing attempts often contain a number of clues:</p>
+
+        <ul class="less-padding-left">
+            <li>They are typically addressed to generic recipients such as "Dear Sir/Madam" or "Dear user".</li>
+            <li>They contain links and threats of consequences.</li>
+            <li>There might be spelling and grammar mistakes.</li>
+            <li>The sender's email address might not be from an official domain.</li>
+        </ul>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Shouldering</strong> is the way of obtaining someone's private information (PIN, password, etc.) by looking while they enter it.
+        </p>
+
+        <p>
+            Unlike other forms of social engineering, shouldering requires close physical proximity to the victim and
+            can therefore not be carried out remotely.
+        </p>
 
         <br />
 
@@ -34,13 +88,16 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            
+            How could a network be protected against social engineering?
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-                
+                &bullet; Educate people about the methods that hackers use <br />
+                &bullet; Implement effective user access levels <br />
+                &bullet; Utilise two-factor authentication <br />
+                &bullet; Use a password manager and don't reuse passwords
             </span>
         </p>
 
