--- a/revision/6-05-Preventing-Threats/index.html
+++ b/revision/6-05-Preventing-Threats/index.html
@@ -26,7 +26,49 @@
         <a class="prev-link" href="../6-04-Malware/">Previous: 6.04 - Malware</a>
         <br /> <br />
 
-        <!-- -->
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Biometrics</strong> authenticate or verify an individual's identity using physical data unique to that individual.
+        </p>
+
+        <p>Types of biometric data include fingerprints and face recognition.</p>
+
+        <p>
+            To make fingerprint and facial recognition easier and quicker, many devices have high-efficiency processors
+            specifically for these tasks. For example, Samsung's Knox Vault has a separate processor and storage to
+            secure your sensitive data.
+        </p>
+
+        <p>
+            The advantages and disadvantages of biometric authentication are at the bottom of
+            <a href="../5-05-Network-Security/">5.05 (Network Security)</a>.
+        </p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            A <strong>Completely Automated Public Turing test to tell Computers and Humans Apart</strong> (CAPTCHA) confirms that the system is being accessed by a person and not a robot.
+        </p>
+
+        <p>
+            They work by asking users to complete challenges that computers are not good at. However, because computers
+            can be trained to be good at something very quickly, CAPTCHAs are evolving rapidly.
+        </p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Verification emails</strong> protect against automated sign-ups from bots, alongside CAPTCHAs.
+        </p>
+
+        <p>Emails can also be used as part of a two-factor authentication (2FA) strategy, securing the account.</p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            <strong>Automatic software updates</strong> help ensure your computer has up-to-date security fixes for any known vulnerabilities.
+        </p>
+
+        <p>
+            This is covered in more detail in <a href="../6-01-Cyber-Security-Threats/">6.01 (Cyber Security Threats)</a>.
+        </p>
 
         <br />
 
@@ -34,13 +76,15 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            
+            What threat does each method protect against?
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-                
+                Biometrics: shouldering <br />
+                CAPTCHAs and verification emails: distributed denial-of-service (DDoS) <br />
+                Automatic software updates: malware
             </span>
         </p>
 
