--- a/revision/6-05-Preventing-Threats/index.html
+++ b/revision/6-05-Preventing-Threats/index.html
@@ -94,6 +94,11 @@
 
         <br /> <br />
 
+        <a class="next-link" href="../6-Summary-Questions/">Next: Section 6 Summary Questions</a>
+
+        <br /> <br />
+        <br /> <br />
+
         <div id="sub">© Rujul Nayak <span id="year">2024-</span></div>
         <script src="../../year.js"></script>
 
