--- a/revision/index.html
+++ b/revision/index.html
@@ -128,6 +128,11 @@
             <li><a href="./6-Summary-Questions/">Summary Questions</a></li>
         </ul>
 
+        <h3><strong>Section 7 - Structured Query Language</strong></h3>
+
+        <ul>
+        </ul>
+
         <br />
         <br />
 
