--- a/revision/7-01-Databases/index.html
+++ b/revision/7-01-Databases/index.html
@@ -31,13 +31,6 @@
             <strong>Databases</strong> are used to store large amounts of data, organised into tables.
         </p>
 
-        <!--
-        <p class="definition">
-            <img src="../icons/book.svg" class="icon" />
-            <strong>Structured Query Language</strong> (SQL, pronounced "sequel") provides an efficient way to retrieve the information from a database.
-        </p>
-        -->
-
         <p>Table 1 shows an example table, called <code>Students</code>.</p>
 
         <p class="table">
@@ -107,11 +100,11 @@
         </p>
 
         <ul class="less-padding-left">
-            <li><code>Integer</code> (whole number)</li>
-            <li><code>Float</code>/<code>Real</code> (number with a decimal part)</li>
-            <li><code>Date</code>, <code>Time</code> (exactly what it sounds like)</li>
-            <li><code>Char</code> (fixed length string)</li>
-            <li><code>Varchar</code> (variable length string)</li>
+            <li><code class="other">Integer</code> (whole number)</li>
+            <li><code class="other">Float</code> / <code class="other">Real</code> (number with a decimal part)</li>
+            <li><code class="other">Date</code>, <code class="other">Time</code> (exactly what it sounds like)</li>
+            <li><code class="other">Char</code> (fixed length string)</li>
+            <li><code class="other">Varchar</code> (variable length string)</li>
         </ul>
 
         <p>(See also: <a href="../2A-02-Data-Types/">2A.02 - Data Types</a>)</p>
@@ -128,10 +121,10 @@
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-                <code>StudentID</code> - <code>Integer</code> <br />
-                <code>FirstName</code> - <code>Varchar</code> <br />
-                <code>LastName</code> - <code>Varchar</code> <br />
-                <code>DateOfBirth</code> - <code>Date</code> <br />
+                <code>StudentID</code> - <code class="other">Integer</code> <br />
+                <code>FirstName</code> - <code class="other">Varchar</code> <br />
+                <code>LastName</code> - <code class="other">Varchar</code> <br />
+                <code>DateOfBirth</code> - <code class="other">Date</code> <br />
             </span>
         </p>
 
