--- a/revision/7-07-Relational-Databases/index.html
+++ b/revision/7-07-Relational-Databases/index.html
@@ -26,7 +26,118 @@
         <a class="prev-link" href="../7-06-Update-and-Delete/">Previous: 7.06 - Update and Delete</a>
         <br /> <br />
 
-        <!-- -->
+        <p>
+            So far in this section we have only looked at databases with one table. But, databases can also have
+            multiple tables that are linked to each other by primary keys.
+        </p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            A <strong>relational database</strong> is a database containing multiple tables, in order to reduce data inconsistency and redundancy.
+        </p>
+
+        <p>Table 1 shows the <code>Students</code> table, copied over from 7.01.</p>
+
+        <p class="table">
+            <img src="../icons/table.svg" class="icon" />
+            Table 1
+        </p>
+
+        <table>
+            <tr>
+                <th><strong>StudentID</strong></th>
+                <th><strong>FirstName</strong></th>
+                <th><strong>LastName</strong></th>
+                <th><strong>DateOfBirth</strong></th>
+            </tr>
+            <tr>
+                <td>0</td>
+                <td>William</td>
+                <td>Smith</td>
+                <td>15/04/2009</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Sid</td>
+                <td>Chopra</td>
+                <td>04/11/2008</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Freddie</td>
+                <td>Brown</td>
+                <td>28/01/2009</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>William</td>
+                <td>Jones</td>
+                <td>13/09/2008</td>
+            </tr>
+        </table>
+
+        <p><br />Table 2 shows part of a new <code>Grades</code> table in the same database.</p>
+
+        <p class="table">
+            <img src="../icons/table.svg" class="icon" />
+            Table 2
+        </p>
+
+        <table>
+            <tr>
+                <th><strong>StudentID</strong></th>
+                <th><strong>Subject</strong></th>
+                <th><strong>Percentage</strong></th>
+                <th><strong>Grade</strong></th>
+            </tr>
+            <tr>
+                <td>0</td>
+                <td>Maths</td>
+                <td>78</td>
+                <td>8</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Computer Science</td>
+                <td>61</td>
+                <td>6</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Chemistry</td>
+                <td>94</td>
+                <td>9</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Chemistry</td>
+                <td>81</td>
+                <td>8</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Geography</td>
+                <td>69</td>
+                <td>7</td>
+            </tr>
+        </table>
+
+        <br />
+
+        <p>
+            Because there are multiple records in the <code>Grades</code> table for each student, it would not be
+            possible to fit everything in one table without redundancy (rewriting the same data over and over again).
+        </p>
+
+        <p class="definition">
+            <img src="../icons/book.svg" class="icon" />
+            A <strong>foreign key</strong> is a field (column) which is the primary key of another table.
+        </p>
+
+        <p>
+            The foreign key in the <code>Grades</code> table is <code class="other">StudentID</code> (because it is the
+            primary key of the <code>Students</code> table).
+        </p>
 
         <br />
 
@@ -34,13 +145,15 @@
 
         <p class="question">
             <img src="../icons/question.svg" class="icon" />
-            
+            Is the relationship between <code>Students</code> and <code>Grades</code> "one-to-one", "one-to-many", or "many-to-many"?
         </p>
 
         <p class="spoiler noselect">
             <span class="default">Tap/click to reveal</span>
             <span class="answer">
-                
+                It is <b>"one-to-many"</b>, because each student has many grades, but each grade refers to one specific student. <br /> <br />
+                An example of a "one-to-one" relationship is between headteachers and schools: each school has one headteacher, and each headteacher works at one school. <br /> <br />
+                An example of a "many-to-many" relationship is between teachers and students: each teacher teaches many students, and each student is taught by many teachers.
             </span>
         </p>
 
